# whoau

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  reload
k8s/: manifest.yml
src/: client.rs  lib.rs  main.rs  server.rs  setting.rs  text.rs  timezone.rs
src/server/: message.rs
