[package]
name = "whoau"
version = "0.5.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["Goda <goda.choe@tridge.com>"]
description = "Multi threading channel-based chat app"
readme = "README.md"
publish = false

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"

[dependencies]
chrono = "0.4.31"
